--- a/styles.css
+++ b/styles.css
@@ -1,403 +1,267 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    outline: none;
-}
-:root{
-    --color-white:#ffffff;
-    --color-light:#828282;
-    --color-primary:#12e12e;
-    --color-dark:#212121;
-    --color-border:#7e686895;
-    --color-bg:#171717;
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
+*{
+    margin:0;
+    padding:0;  
 }
 body{
-    background: var(--color-bg);
-    color: var(--color-white);
+ font-family: "poppins", sans-serif;
 }
-  h1{
-    font-size: 35px;
-    font-weight: 400;
-    color: white;
-    line-height: 30px;
-    margin: 1rem 0;
-    
-    
- }
-h2{
-    font-size: 36px;
-    font-weight: 500;
-    line-height: 30px;
-    color:var(--color-border);
-
-}
-h4{
-    font-size: 20px;
-    font-weight: 600;
-    line-height: 31px;
-    color:var(--color-primary);
-
-}
-h5{
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 20px;
-    color:white;
-
+html{
+    scroll-behavior: smooth;
 }
 p{
-    color:var(--color-white);
-    font-size: 17px;
-    line-height: 23px;
+    color:rgb(85,85,85) ;
 }
-.btn{
-    
-    display: inline-block;
-    width: fit-content;
-    border: 1px solid white;
-    padding: 12px 30px;
-    font-size: 15px;
-    font-weight: 500;
-    transition: .4s ease;
-    color:#ffff;
-    border-radius: 6px;
+a,btn{
+    transition: all 300ms ease;
 }
-.btn:hover{
-    background: white;
-    color: var(--color-bg);
-    border-color:transparent ;
-}
-.btn-primary{
-    background: var(--color-primary);
-    border-color: transparent;
-    
-}
-.container{
-    max-width: 160px;
-    width: 90%;
-    margin: 0 auto;
-    
+nav, .nav-links{
+  display: flex;
 }
 nav{
-    height: 5rem;
-    width: 100%;
-    position:fixed ;
-    top:0;
-    right: 0;
-    
+    justify-content: space-around;
+    align-items: center;
+    height: 17vh;
 }
-.nav-container  {
-  
-  height: 100%;
-  justify-content: center;
-  align-items: center;
+.nav-links{
+    gap: 2rem;
+    list-style: none;
+    font-size:1.5rem;
+}
+a{
+    color: black;
+    text-decoration: none;
+    text-decoration-color: white;
+}
+a:hover{
+    color: grey;
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+    text-decoration-color: rgb(181,181,181)
+}
+.logo{
+    font-size: 2rem;
+}
+.logo:hover{
+    cursor: default;
+}
+section{
+    padding-top: 4vh;
+    height: 96vh;
+    margin:0 10rem;
+    box-sizing:border-box ;
+    min-height: fit-content;
+}
+.section-container{
+  display: flex;  
+}
+
+#profile{
+    display: flex;
+    justify-content: center;
+    gap:5rem;
+    height: 80vh;
+}
+.section__pic-container{
+    display: flex;
+    height: 400px;
+    width: 400px;
+   margin:auto 0;
+}
+.section__pic-container .pic{
+     border-radius: 50%;
+}
+.section__text{
+  align-self: center;
+  text-align: center;
+}
+.section__text p {
+  font-weight: 600;
+}
+
+.section__text__p1 {
+  text-align: center;
+}
+
+.section__text__p2 {
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
+.title {
+  font-size: 3rem;
+  text-align: center;
+}
+
+#socials-container {
   display: flex;
-
+  justify-content: center;
+  margin-top: 1rem;
+  gap: 1rem;
+}
+.icon {
+  cursor: pointer;
+  height: 2rem;
 }
 
-ul {
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 950px;
-    margin-inline-end:100px;
-    padding-inline-start: 40px;
-    
+.btn-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
 }
-.logo h2{
-    color: white;
-    font-size: 32px;
+
+.btn {
+  font-weight: 600;
+  transition: all 300ms ease;
+  padding: 1rem;
+  width: 8rem;
+  border-radius: 2rem;
 }
-.nav-container ul{
+
+.btn-color-1,
+.btn-color-2 {
+  border: rgb(53, 53, 53) 0.1rem solid;
+}
+
+.btn-color-1:hover,
+.btn-color-2:hover {
+  cursor: pointer;
+}
+
+.btn-color-1,
+.btn-color-2:hover {
+  background: rgb(53, 53, 53);
+  color: white;
+}
+
+.btn-color-1:hover {
+  background: rgb(0, 0, 0);
+}
+
+.btn-color-2 {
+  background: none;
+}
+
+.btn-color-2:hover {
+  border: rgb(255, 255, 255) 0.1rem solid;
+}
+
+.btn-container {
+  gap: 1rem;
+}
+#about{
+
+    position: relative;
+}
+.about-containers{
+    gap:2rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
+.about-details-container{
+    justify-content:center;
+    flex-direction:column
+}
+.about-containers,.about-details-container{
     display: flex;
-    align-items: center;
-    gap:40px;
 }
-.nav-container ul li a{
-    color: #ffffff;
-    font-size: 16px;
-    font-weight: 400;
-    transition: .4s ease;
-    
+.about-pic{
+    border-radius: 2rem;
 }
-.nav-container ul li a:hover{
-    color:var(--color-primary);
+.details-container{
+    padding: 1.5rem;
+  flex: 1;
+    background: white;
+    border-radius: 2rem;
+    border: rgb(53,53,53) 0.1rem solid;
+    border-color: rgb(163,163, 163);
+    text-align:center;
 }
-span{
-     
-    color: var(--color-primary);
-    text-shadow:0 0 10px blueviolet;
-    
+.section-container{
+    gap:5rem;
+    height: 80%;
 }
-header{
-    margin-top: 190px;
-    
-
-    
+.section__pic-container{
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
 }
-
-
-.header-container{
-    display: grid;
-    grid-template-columns: 548% 120%;
-    align-items: center;
-    margin-left: 10%;
-}
-img{
-    width: 170%;
-    display: block;
-    
-    
-}
-.header-container p{
-    width: 90%;
-    margin: 2rem 0 1rem;
-    font-style:normal;
-}
-.name{
-    width: 50px;
-    font-size: 60px;
-    font-weight: 500;
-}
-.header-container h5{
-    margin: 1rem 0;
-    color: var(--color-light);
-}
-.header-action-aria{
-    display: flex;
-    gap: 10px;
-    align-items: center;
-}
-#About{
-    padding-top:70px;
-}
-section>h1{
-    text-align: center;
-    margin-bottom: 44px;
-    margin-top: 158px;
-}
-.about-container p{
-    
-    margin: 4px auto;
-    width: 62%;
-    position: absolute;
-    margin-left: -26%;
-    font-style:normal;
-    font-weight: 55px;
-    text-align: center;
-    font-size: 25px;
-
-    
-}
-    
-    
-
-.about-content{
-margin-top: 600%;
-display: grid;
-margin: 280px 18%;
-grid-template-columns: repeat(4,1fr);
-justify-content: center;
-align-items: center;
-
-
-
-}
-.about-article{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin: auto;
-    gap: 10px;
-    text-align: center;
-}
-.about-article img{
-    width: 62px;
-}
-#Services{
-    padding-top: 8px;
-    
-}
-
-.services-container{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap:60px;
-    margin-top: 100px;
-   justify-content: center;
-}
-.services-article{
-    background: var(--color-dark);
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    padding: 50px;
-    border-bottom: 4px solid transparent;
-}
-.services-article:hover{
-    border-color: var(--color-primary);
-}
-.services-article img{
-    width: 40px;
-}
-.services-article p{
-    font-family:'Times New Roman', Times, serif;
-}
-
-
-
-
-
-
-
-
-
 #skills{
-    padding-top: -1px;
-    
+    position: relative;
+}
+.skills-sub-title{
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;  
+}
+.skills-details-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.skills-container{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    gap:60px;
-    margin-top: 100px;
-   justify-content: center;
-   text-align: center;
-
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2.5rem;
+  justify-content: space-around;
 }
-.skill-article{
-    background: var(--color-dark);
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    padding:16px 90px;
-    border-radius: 14px;
-    
-    border-bottom: 4px solid transparent;
-}
-.skill-article:hover{
-    border-color: var(--color-primary);
-    
+article {
+  display: flex;
+  width: 10rem;
+  justify-content: space-around;
+  gap: 0.5rem;
 }
 
-#Blog .row{
-    width: 80%;
-    margin: auto;
+article .icon {
+  cursor: default;
 }
-#Blog .row .header{
-    width: 60%;
-    text-align: center;
-    margin: auto;
-}
-#Blog .row .header h1{
-   padding-top: 280px;
-   gap: 19px;
-}
- .header h1{
-  margin:29px ;
-}
-#Blog .row .header p{
-    margin-top: 15px;
-    font-size: 18px;
-    line-height: 1.3;
-}
-.content .card img{
-    width: 100% ;
-    height: auto;
-}
-.content .card p{
-    font-size: 20px;
-    line-height: 1.2;
-}
-.content{
- display: flex;
-  align-items:center;
-  justify-content:space-between;
-  margin: 44px;
-  
-}
-.content .card{
-    flex: 2;
-    margin: 50px 50px;
-    box-shadow: 0px  4px 0px rgba(0,0,0,0,1);
-    background-color: #212121;
-    border-radius: 19px;
+#contact {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 70vh;
 }
 
-
-#Contact{
-    padding-top: 120px;
-}
-.contatact-container{
-    margin-top: 80px;
-}
-form{
-    width: 60%;
-    margin: 0 auto;
-    position: absolute;
-    margin-left: -25%;
-}
-.form-top{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap:40px
-}
-form input{
-    padding: 10px;
-    background: transparent;
-    margin-bottom: 30px;
-    color: var(--color-light);
-    border: none;
-    box-shadow: 0 1px 0 0 var(--color-border);
-    transition: .4s ease;
-    font-size: 15px;
-    line-height: 18px;
-    font-weight: 500;
-}
-form input:focus{
-    border-bottom: 1px solid blueviolet;
-    color:var(--color-primary);
-    box-shadow: none;
-}
-.form-bottom{
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    align-items: center;
-}
-.form-bottom textarea{
-    width: 100%;
-    padding: 9px;
-    height: 100px;
-    background: transparent;
-    resize: none;
-    font-size: 14px;
-    line-height: 18px;
-    font-weight: 500;
-    margin-top: 17px;
-    border: 1px solid var(--color-border);
-    color: var(--color-primary);
-}
-.form-bottom textarea :focus{
-border-bottom: 1px solid blueviolet;
+.contact-info-upper-container {
+  display: flex;
+  justify-content: center;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  background: (250, 250, 250);
+  margin: 2rem auto;
+  padding: 0.5rem;
 }
 
-footer{
-    margin-top:500px ;
-    margin-bottom: 40px ;
-    text-align: center;
-    color:var(--color-border);
+.contact-info-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 1rem;
 }
-.naWinScroll{
-    background: var(--color-dark);
-    box-shadow: 0 0.1rem rgba(0,0,0,0,7);
+
+.contact-info-container p {
+  font-size: larger;
+}
+
+.contact-icon {
+  cursor: default;
+}
+
+.email-icon {
+  height: 2.5rem;
+}
+footer {
+  height: 26vh;
+  margin: 0 1rem;
+}
+
+footer p {
+  text-align: center;
 }
